@@ -1,3 +1,4 @@
+* Sale date is required only at confirmation
 * warehouse is not always required
 
 Version 2.2.0 - 2011-10-25
